<resources>
    <string name="app_name">2FAuth</string>
    <string name="app_version">App version</string>
    <string name="app_build_version_number">%1$s (build number %2$d)</string>
    <string name="app_build_version_number_prerelease">%1$s (build number %2$d, pre-release)</string>
    <string name="app_version_is_debug_release">%1$s\n\nThis is a Development release</string>
    <string name="how_interact_with_accounts">(This message will only be displayed once)\n\nWe\'ve modified the way you can interact with accounts:\n\nWhen an account\'s 2FA code isn\'t visible, a click will show it, while a long click will take you to the account editing activity.\n\nConversely, when an account\'s 2FA code is visible, a click in the account area will hide it, while a long click will copy it to the clipboard and, depending on your settings, minimizes the app</string>
    <string name="settings">Settings</string>
    <string name="sync_service_notifications_channel">Synchronization Service Notifications</string>
    <string name="syncing_2fa_codes">Syncing user 2FA codes</string>
    <string name="no_2fa_codes">No 2FA accounts</string>
    <string name="server_identities">Identities</string>
    <string name="server_identities_summary">Click to manager your identities</string>
    <string name="no_server_identities">No defined identities</string>
    <string name="select_a_server_identity_to_filter">Select the identity whose accounts you want to view</string>
    <string name="no_filter_by_server_identity">Do not filter by identity</string>
    <string name="add_new_server_identity">Add one server identity</string>
    <string name="server_identity_will_be_removed">The identity will be deleted.\n\n\This action has no effect on data stored on your server.\n\nAre you sure you want to continue?</string>
    <string name="server_identity_and_accounts_will_be_removed">The identity and related accounts will be deleted.\n\nThis action has no effect on data stored on your server.\n\nAre you sure you want to continue?</string>
    <string name="server_identity_and_accounts_and_not_synced_accounts_will_be_removed">The identity and related accounts, including not synced accounts, will be deleted.\n\nThis action has no effect on data stored on your server.\n\nAre you sure you want to continue?</string>
    <string name="server_identity_data_saved">Server identity data has been saved</string>
    <string name="accounts_will_be_removed">The related accounts will be deleted.\n\nThis action has no effect on data stored on your server.\n\nAre you sure you want to continue?</string>
    <string name="accounts_and_not_synced_accounts_will_be_removed">The related accounts, including not synced accounts, will be deleted.\n\nThis action has no effect on data stored on your server.\n\nAre you sure you want to continue?</string>
    <string name="cancel_identity_edition_message">Server identity data has been changed.\n\nWhat do you want to do?</string>
    <string name="cancel_identity_creation_message">@string/cancel_account_edition_message</string>
    <string name="label">Label</string>
    <string name="label_dialog_title">@string/label</string>
    <string name="label_dialog_message">Enter a name for the server identity that will allow you to identify it in the list of identities (otherwise, the name set for the account on the server will be used, if available)</string>
    <string name="label_not_set">Label is not set</string>
    <string name="server_location">Server URL</string>
    <string name="server_location_dialog_title">@string/server_location</string>
    <string name="server_location_dialog_message">Please, enter the server location (including the http/https part and the port, in case this is not the standard).\n\nExample: https://demo.2fauth.app</string>
    <string name="server_location_is_not_set">Server location is not set</string>
    <string name="server_http_is_insecure_warning">The server location you specified is not secure.\n\nWe strongly recommend that you move it to a secure location (you may need to install traefik, nginx-proxy, or similar) except for testing purposes and if you are aware of the risks</string>
    <string name="token_value">Token value</string>
    <string name="token_value_is_set_summary">Click to set a new token</string>
    <string name="token_value_is_not_set_summary">Click to set the token value</string>
    <string name="token_value_dialog_title">@string/token_value</string>
    <string name="token_value_dialog_message">Please, enter the token value.\n\nTo obtain a token go the server URL in a web browser, log in to your user account, navigate to "OAuth Settings" under "Settings" and finally click "generate a token" then copy the value and paste here</string>
    <plurals name="sync_details">
        <item quantity="one">Last sync was on %2$s and one accounts were loaded</item>
        <item quantity="other">Last sync was on %2$s and %1$d accounts were loaded</item>
        <item quantity="many">Last sync was on %2$s and %1$d accounts were loaded</item>
    </plurals>
    <string name="sync_on_startup">Sync on startup</string>
    <string name="sync_on_startup_summary">Attempts to sync server data every time the app starts</string>
    <string name="sync_immediately">Sync items immediately</string>
    <string name="sync_immediately_summary">Attempt to immediately sync data to the server when it\'s added, updated, or deleted in the app.\n\nIn any case, not synced items are updated on global sync process</string>
    <string name="appearance">Appearance &amp; usability</string>
    <string name="sort_accounts_by_last_use">Sort accounts by usage</string>
    <string name="sort_accounts_by_last_use_summary">Sort accounts by usage (list first the last accounts for which an OTP code has been displayed) instead of just sorting by service name</string>
    <string name="reset_accounts_last_use_data">Reset accounts usage</string>
    <string name="reset_accounts_last_use_data_summary">Removes last used data from accounts and sorting is reset</string>
    <string name="accounts_list_columns_portrait">Columns in portrait mode</string>
    <string name="accounts_list_columns_landscape">Columns in landscape mode</string>
    <string name="display_account_server_identity">Display identity label</string>
    <string name="display_account_server_identity_summary">If you have added more than one identities, the label of the server identity to which the account belongs will be displayed</string>
    <string name="display_account_group">Display account group</string>
    <string name="display_account_group_summary">The name of the group to which the account belongs will be displayed, if applicable</string>
    <string name="minimize_app_after_copy_to_clipboard">Minimize after copy to clipboard</string>
    <string name="minimize_app_after_copy_to_clipboard_summary">Minimizes the app when an OTP code is copied to the Clipboard</string>
    <string name="haptic_feedback">Haptic feedback</string>
    <string name="haptic_feedback_summary">Make your phone vibrate slightly in response to some actions, such as pressing a button, showing or hiding an OTP code, or copying it to the clipboard</string>
    <string name="allow_animations">Allow animations</string>
    <string name="allow_animations_summary">Show animations for certain buttons, which adds a minimal delay to some actions in exchange for greater visual impact</string>
    <string name="theme">Theme</string>
    <string name="security">Security</string>
    <string name="disable_screenshots">Disable screenshots</string>
    <string name="disable_screenshots_summary">Do not allow to take screenshots from the accounts list</string>
    <string name="hide_otp_codes_automatically">Hide OTP codes automatically</string>
    <string name="hide_otp_codes_automatically_summary">Automatically hide the OTP code after a complete display cycle (you must press it again to display the next one)</string>
    <string name="show_next_otp_code">Show next OTP code</string>
    <string name="show_next_otp_code_summary">For time-based codes (TOTP), displaying the code will also display the next one.\n\nPlease note that the \"copy to clipboard\" function will only work on the current code</string>
    <string name="pin_access">Secret PIN</string>
    <string name="pin_access_summary">Require a PIN code to access the app or perform some especially relevant actions</string>
    <string name="use_fingerprint_instead_of_pin_code">Fingerprint access</string>
    <string name="use_fingerprint_instead_of_pin_code_summary">Use the user\'s fingerprint instead of the PIN code</string>
    <string name="allow_copy_server_access_tokens">Allow copy access token</string>
    <string name="allow_copy_server_access_tokens_summary">Include a button in the identity data edition screen to copy the server access token to the clipboard (highly unrecommended if a secure access method is not activated)</string>
    <string name="privacy">Privacy</string>
    <string name="download_icons_from_external_sources">Download from external sources</string>
    <string name="download_icons_from_external_sources_summary">We will attempt to download icons that was not found on your server, or was an incompatible format, from open source repositories using the service name, which may leak some private data, such as the 2FA services you use or your IP address</string>
    <string name="others">Others</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="open_source_licenses_summary">Click to view the Open Source License agreements of the external software libraries we use</string>
    <string name="github_repo">GitHub repo</string>
    <string name="github_repo_summary">Open the app\'s GitHub repository to get information about the latest releases, report bugs, or contribute to development</string>
    <string name="auto_update_app">Automatic updates</string>
    <string name="auto_update_app_summary">When you enter the app, it will connect to the repository to check for updates, downloading and installing them if necessary</string>
    <string name="auto_update_app_include_prereleases">Include pre-releases</string>
    <string name="auto_update_app_include_prereleases_summary">Pre-releases includes new features, which may be unstable.\nPlease, do not forget to report any bugs you encounter</string>
    <string name="auto_update_app_only_in_wifi">Update only in WiFi Networks</string>
    <string name="auto_update_app_only_in_wifi_summary">Only check for and download new versions of the app if there is an active WiFi connection</string>
    <string name="how_do_you_want_to_add_account_data">How do you want to add account data?</string>
    <string name="add_account_data_from_a_qr_code">From a QR code</string>
    <string name="add_account_data_from_a_form">Use a form</string>
    <string name="camera_permission_is_optional">You can select the QR code from the gallery or use the device camera, but in that case you will need to grant camera access permission if prompted</string>
    <string name="no_external_qr_libraries_be_used">To protect your privacy, we will not use any external library to obtain the QR data but we will send it to your server for decoding, with the drawback that it will only be able to do so if you are connected to the server\'s network</string>
    <string name="you_can_edit_qr_data_when_decoded">When the QR code you select was decoded by your server, we will redirect you to the editing form to validate or edit the data</string>
    <string name="select_server_identity_header">Select below the identity that will be used to decode the QR code:</string>
    <string name="server_loaded_data">Server loaded data</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="is_admin">Service Administrator</string>
</resources>