<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.twofauth.android.CancellableEditTextPreference android:key="server" android:title="@string/server_location" android:dialogTitle="@string/server_location_dialog_title" android:dialogMessage="@string/server_location_dialog_message" android:singleLine="true" android:inputType="textUri|textNoSuggestions" android:persistent="false" />

    <com.twofauth.android.CancellableEditTextPreference android:key="token" android:title="@string/token_value" android:dialogTitle="@string/token_value_dialog_title" android:dialogMessage="@string/token_value_dialog_message" android:singleLine="true" android:inputType="textNoSuggestions" android:persistent="false" />

    <Preference android:key="open-server-location" android:title="@string/open_server_location" android:summary="@string/open_server_location_summary" />

    <Preference android:key="sync-details" android:title="@string/sync_details" />

    <PreferenceCategory android:title="@string/appearance">

        <CheckBoxPreference android:key="sort-accounts-by-last-use" android:title="@string/sort_accounts_by_last_use" android:summary="@string/sort_accounts_by_last_use_summary" android:defaultValue="@bool/sort_accounts_by_last_use_default" />

        <Preference android:key="reset-accounts-last-use-data" android:title="@string/reset_accounts_last_use_data" android:summary="@string/reset_accounts_last_use_data_summary" android:dependency="sort-accounts-by-last-use" />

        <CheckBoxPreference android:key="ungroup-otp-code" android:title="@string/ungroup_otp_codes" android:summary="@string/ungroup_otp_codes" android:defaultValue="@bool/ungroup_otp_code_default" />

        <CheckBoxPreference android:key="display-account-group" android:title="@string/display_account_group" android:summary="@string/display_account_group_summary" android:defaultValue="@bool/display_account_group_default" />

        <CheckBoxPreference android:key="minimize-app-after-copy-to-clipboard" android:title="@string/minimize_app_after_copy_to_clipboard" android:summary="@string/minimize_app_after_copy_to_clipboard_summary" android:defaultValue="@bool/minimize_app_after_copy_to_clipboard_default" />

        <CheckBoxPreference android:key="haptic-feedback" android:title="@string/haptic_feedback" android:summary="@string/haptic_feedback_summary" android:defaultValue="@bool/haptic_feedback_default" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security">

        <CheckBoxPreference android:key="disable-screenshots" android:title="@string/disable_screenshots" android:summary="@string/disable_screenshots_summary" android:defaultValue="@bool/disable_screenshots_default" />

        <CheckBoxPreference android:key="hide-otp-codes-automatically" android:title="@string/hide_otp_codes_automatically" android:summary="@string/hide_otp_codes_automatically_summary" android:defaultValue="@bool/hide_otp_codes_automatically_default" />

        <CheckBoxPreference android:key="show-next-otp-code" android:title="@string/show_next_otp_code" android:summary="@string/show_next_otp_code_summary" android:defaultValue="@bool/show_next_otp_code_default" />

        <CheckBoxPreference android:key="pin-access" android:title="@string/pin_access" android:summary="@string/pin_access_summary" android:defaultValue="false" />

        <CheckBoxPreference android:key="use-fingerprint-instead-of-pin-code" android:title="@string/use_fingerprint_instead_of_pin_code" android:summary="@string/use_fingerprint_instead_of_pin_code_summary" android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/others">

        <Preference android:key="github-repo" android:title="@string/github_repo" android:summary="@string/github_repo_summary" />

        <CheckBoxPreference android:key="auto-update-app" android:title="@string/auto_update_app" android:summary="@string/auto_update_app_summary" android:defaultValue="@bool/auto_update_app_default" />

        <CheckBoxPreference android:key="auto-update-app-only-in-wifi" android:title="@string/auto_update_app_only_in_wifi" android:summary="@string/auto_update_app_only_in_wifi_summary" android:defaultValue="@bool/auto_update_app_only_in_wifi_default" android:dependency="auto-update-app" />

        <Preference android:key="open-source-licenses" android:title="@string/open_source_licenses" android:summary="@string/open_source_licenses_summary" />

        <Preference android:key="app-version" android:title="@string/app_version" />

    </PreferenceCategory>

</PreferenceScreen>
