<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.twofauth.android.preferences_activity.CancellableEditTextPreference android:key="label" android:title="@string/label" android:dialogTitle="@string/label_dialog_title" android:dialogMessage="@string/label_dialog_message" android:singleLine="true" android:inputType="textUri|textNoSuggestions" android:persistent="false" />

    <com.twofauth.android.preferences_activity.CancellableEditTextPreference android:key="server" android:title="@string/server_location" android:dialogTitle="@string/server_location_dialog_title" android:dialogMessage="@string/server_location_dialog_message" android:singleLine="true" android:inputType="textUri|textNoSuggestions" android:persistent="false" />

    <com.twofauth.android.preferences_activity.CancellableEditTextPreference android:key="token" android:title="@string/token_value" android:dialogTitle="@string/token_value_dialog_title" android:dialogMessage="@string/token_value_dialog_message" android:singleLine="true" android:inputType="textNoSuggestions" android:persistent="false" />

    <CheckBoxPreference android:key="sync-on-startup" android:title="@string/sync_on_startup" android:summary="@string/sync_on_startup_summary" android:persistent="false" />

    <CheckBoxPreference android:key="sync-immediately" android:title="@string/sync_immediately" android:summary="@string/sync_immediately_summary" android:persistent="false" />

    <PreferenceCategory android:key="server-loaded-data" android:title="@string/server_loaded_data">

        <Preference android:key="name" android:title="@string/name" />

        <Preference android:key="email" android:title="@string/email" />

        <Preference android:key="is-admin" android:title="@string/is_admin" />

    </PreferenceCategory>

</PreferenceScreen>
